Fix title contrast on pictures

--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,7 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+.black-text-shadow {
+    text-shadow: 0px 0px 6px rgb(65, 65, 65);
+}
